Implementing linter with tests

--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "version": "0.0.1",
   "homepage": "https://github.com/tictrac/grunt-i18n-linter",
   "author": {
-    "name": "Liam Keaton",
-    "email": "liamkeaton@gmail.com",
-    "url": "liamkeaton.com"
+    "name": "Tictrac",
+    "email": "developer@tictrac.com",
+    "url": "tictrac.com"
   },
   "repository": {
     "type": "git",
